Fixed column specifications on quiz portions for readability

--- a/main.css
+++ b/main.css
@@ -116,11 +116,12 @@ to be considered centered*/
    background-color: #2b3e50;
    overflow-y:auto;
    overflow-x:hidden;
+   padding-bottom:1%;
 }
 a{
    text-decoration:none;
    font-weight:bold;
-   font-family: 'Philosopher', sans-serif;
+   font-family: 'Raleway', sans-serif;
 }
 
 .container-fluid{
